@@ -96,3 +96,5 @@ to turn on? --Chapman Flack
 >>>>>> Here's my attempt at a [[patch]] for anchor-based change permalinks:
 >>>>>> <http://pastie.org/295016>.
 >>>>>> --[[JasonBlevins]], 2008-10-17
+
+[[done]]
