@@ -3,7 +3,9 @@
 [[!meta authorurl="""<TMPL_VAR AUTHORURL>"""]]
 </TMPL_IF>
 [[!meta title="""change to<TMPL_LOOP NAME="PAGES"> <TMPL_VAR PAGE></TMPL_LOOP> on <TMPL_VAR WIKINAME>"""]]
+<TMPL_IF PERMALINK>
 [[!meta permalink="<TMPL_VAR PERMALINK>"]]
+</TMPL_IF>
 <div id="change-<TMPL_VAR REV>" class="metadata">
 <div class="metadata">
 <span class="desc"><br />Changed pages:</span>
