@@ -6,6 +6,8 @@ ikiwiki (2.68) UNRELEASED; urgency=low
     move it to toggle.js in the javascript underlay.
   * relativedate: New javascript-alicious plugin that makes all dates display
     relative, in a very nice way, if I say so myself.
+  * recentchanges: Make feed links point back to anchors on the recentchanges
+    page. (JasonBlevins)
 
  -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2008 20:11:02 -0400
 
